# semail

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README  README.md  mod.rs  send.http  sqlite.db-shm  sqlite.db-wal
client/: .prettierrc  Cargo.toml  Dioxus.toml  README.md  astro.config.ts  index.html  input.css  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
client/assets/: main.css
client/public/: tailwind.css
client/src/: app.css  app.html  main.rs
client/src/components/: button.rs  input.rs  link.rs  login.svelte  mod.rs  register.svelte  submit.rs
client/src/layouts/: base.astro  form.rs
client/src/lib/: forms.ts
client/src/pages/: home.rs  index.astro  register.astro
client/src/routes/: index.rs  login.rs  register.rs
client/src/routes/login/: +page.server.ts  +page.svelte
client/src/routes/register/: +page.server.ts  +page.svelte
entity/src/: accounts.rs  mails.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240705_115216_init.rs
server/: .env  .gitignore  Cargo.toml  sqlite.db-shm  sqlite.db-wal
server/.devcontainer/: devcontainer.json
server/entity/: Cargo.toml
server/entity/src/: accounts.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20240705_115216_init.rs
server/src/: db.rs  main.rs
server/src/common/: api.rs  db.rs  mod.rs  opaque.rs  state.rs
server/src/routes/: get_emails.rs  get_users.rs  mod.rs  receive.rs  whodis.rs
server/src/routes/auth/: challenge.rs  login.rs  mod.rs  register.rs  register_old.rs
server/src/routes/auth/login/: finish.rs  mod.rs  start.rs
server/src/routes/auth/register/: finalize.rs  finish.rs  mod.rs  request.rs  start.rs
src/: db.rs  main.rs
src/routes/: README  receive.rs  send.rs
