[package]
name = "office"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ ".", "entity", "migration" ]

[dependencies]
axum = "0.7.5"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = [ "full" ] }
serde = { version = "1.0.203", features = [ "derive" ] }
sea-orm = { version = "0.12.15", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-native-tls", "sqlite" ] }
log = "0.4.22"
migration = { path = "migration" }
entity = { path = "entity" }
uuid = { version = "1.9.1", features = [ "v7", "fast-rng" ] }
