[package]
name = "semail"
version = "1.0.0-alpha.1"
edition = "2021"

[workspace]
members = [ ".", "entity", "migration" ]

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
base64 = "0.22.1"
bincode = "1.3.3"
dashmap = "6.0.1"
dotenv = "0.15.0"
log = "0.4.22"
rand = "0.8.5"
regex = "1.10.5"
sea-orm = { version = "0.12.15", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0.203", features = [ "derive" ] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1.38.0", features = [ "full" ] }
uuid = { version = "1.9.1", features = [ "v7", "fast-rng", "macro-diagnostics" ] }
webauthn-rs = "0.5.0"

entity = { path = "entity" }
migration = { path = "migration" }
